--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 # Godot 4+ specific ignores
 .godot/
+
+# Godot-specific ignores
+.import/
+export.cfg
+# export_presets.cfg - We need this for github actions.
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
+
+# VS Code ignores
+.vscode/
+
+# PDR GitIgnore
+build/
