--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [mac, web]
+        platform: [windows, web]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
