--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -6,7 +6,7 @@ on:
 env:
   GODOT_VERSION: 4.2.2
   EXPORT_NAME: jam_dev
-  PROJECT_PATH: godot_template
+  # PROJECT_PATH: godot_template
 
 jobs:
   export-windows:
@@ -26,7 +26,6 @@ jobs:
       - name: Windows Build
         run: |
           mkdir -v -p build/windows
-          cd $PROJECT_PATH
           godot --headless --verbose --export-release "Windows Desktop" ../build/windows/$EXPORT_NAME.exe
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
@@ -51,7 +50,6 @@ jobs:
       - name: Web Build
         run: |
           mkdir -v -p build/web
-          cd $PROJECT_PATH
           godot --headless --verbose --export-release "HTML5" ../build/web/index.html
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
@@ -76,7 +74,6 @@ jobs:
       - name: Mac Build
         run: |
           mkdir -v -p build/mac
-          cd $PROJECT_PATH
           godot --headless --verbose --export-release "Mac OSX" ../build/mac/$EXPORT_NAME.zip
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
