--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -1,29 +1,90 @@
-name: Build Godot Project
+# This action builds and exports the project to multiple platforms on push to the dev branch
 
-on:
+name: "godot-ci export_dev"
+on: 
   push:
-    branches: ['dev']
+   branches: ['dev']
+
+env:
+  GODOT_VERSION: 4.2.2
+  CI_VERSION: 4.2.2
+  EXPORT_NAME: jam_dev
+  WIN_CONFIG_NAME: windows
+  MAC_CONFIG_NAME: mac
+  WEB_CONFIG_NAME: web
+  LIN_CONFIG_NAME: linux
+  # PROJECT_PATH: godot_template
+  
 
 jobs:
-  Godot:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        platform: [windows, mac, web]
+  export-windows:
+    name: Windows Export - Dev
+    runs-on: ubuntu-20.04
+    container:
+      image: barichello/godot-ci:$CI_VERSION
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           lfs: true
-      - name: Dev Build
-        id: dev_build
-        uses: manleydev/build-godot-action@f759ed7f8fcb5137cb70873ecf663aa8a1bd998b
-        with:
-          name: jam_dev_${{ matrix.platform }}
-          preset: ${{ matrix.platform }}
-          debugMode: "true"
+      - name: Setup
+        run: |
+          mkdir -v -p ~/.local/share/godot/export_templates/
+          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+      - name: Windows Build
+        run: |
+          mkdir -v -p build/windows
+          godot --headless --verbose --export-debug "$WIN_CONFIG_NAME" ./build/windows/$EXPORT_NAME.exe
       - name: Upload Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v1
         with:
-          name: Client - ${{ matrix.platform }}
-          path: ${{ github.workspace }}/${{ steps.build.outputs.build }}
+          name: windows
+          path: build/windows
+
+  export-web:
+    name: HTML5 Export - Dev
+    runs-on: ubuntu-20.04
+    container:
+      image: barichello/godot-ci:$CI_VERSION
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          lfs: true
+      - name: Setup
+        run: |
+          mkdir -v -p ~/.local/share/godot/export_templates/
+          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+      - name: Web Build
+        run: |
+          mkdir -v -p build/web
+          godot --headless --verbose --export-debug "WEB_CONFIG_NAME" ./build/web/index.html
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: web
+          path: build/web
+
+  export-mac:
+    name: MacOS Export - Dev
+    runs-on: ubuntu-20.04
+    container:
+      image: barichello/godot-ci:$CI_VERSION
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          lfs: true
+      - name: Setup
+        run: |
+          mkdir -v -p ~/.local/share/godot/export_templates/
+          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+      - name: Mac Build
+        run: |
+          mkdir -v -p build/mac
+          godot --headless --verbose --export-debug "MAC_CONFIG_NAME" ./build/mac/$EXPORT_NAME.zip
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: mac
+          path: build/mac
