--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -20,7 +20,7 @@ jobs:
     name: Windows Export - Dev
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:$CI_VERSION
+      image: barichello/godot-ci:${{env.CI_VERSION}}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -29,11 +29,11 @@ jobs:
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/export_templates/
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+          mv /root/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable ~/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable
       - name: Windows Build
         run: |
           mkdir -v -p build/windows
-          godot --headless --verbose --export-debug "$WIN_CONFIG_NAME" ./build/windows/$EXPORT_NAME.exe
+          godot --headless --verbose --export-debug "${{env.WIN_CONFIG_NAME}}"./build/windows/${{env.EXPORT_NAME}}.exe
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -44,7 +44,7 @@ jobs:
     name: HTML5 Export - Dev
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:$CI_VERSION
+      image: barichello/godot-ci:${{env.CI_VERSION}}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -53,11 +53,11 @@ jobs:
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/export_templates/
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+          mv /root/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable ~/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable
       - name: Web Build
         run: |
           mkdir -v -p build/web
-          godot --headless --verbose --export-debug "WEB_CONFIG_NAME" ./build/web/index.html
+          godot --headless --verbose --export-debug "${{env.WEB_CONFIG_NAME}}" ./build/web/index.html
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -68,7 +68,7 @@ jobs:
     name: MacOS Export - Dev
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:$CI_VERSION
+      image: barichello/godot-ci:${{env.CI_VERSION}}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -77,11 +77,11 @@ jobs:
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/export_templates/
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+          mv /root/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable ~/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable
       - name: Mac Build
         run: |
           mkdir -v -p build/mac
-          godot --headless --verbose --export-debug "MAC_CONFIG_NAME" ./build/mac/$EXPORT_NAME.zip
+          godot --headless --verbose --export-debug "${{env.MAC_CONFIG_NAME}}" ./build/mac/${{env.EXPORT_NAME}}.zip
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
