--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -15,13 +15,12 @@ env:
   LIN_CONFIG_NAME: linux
   # PROJECT_PATH: godot_template
   
-
 jobs:
   export-windows:
-    name: Windows Export - Dev
+    name: Windows Export - Release
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:$CI_VERSION
+      image: barichello/godot-ci:${{env.CI_VERSION}}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -30,11 +29,11 @@ jobs:
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/export_templates/
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+          mv /root/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable ~/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable
       - name: Windows Build
         run: |
           mkdir -v -p build/windows
-          godot --headless --verbose --export-release "$WIN_CONFIG_NAME" ./build/windows/$EXPORT_NAME.exe
+          godot --headless --verbose --export-release "${{env.WIN_CONFIG_NAME}}"./build/windows/${{env.EXPORT_NAME}}.exe
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -42,10 +41,10 @@ jobs:
           path: build/windows
 
   export-web:
-    name: HTML5 Export - Dev
+    name: HTML5 Export - Release
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:$CI_VERSION
+      image: barichello/godot-ci:${{env.CI_VERSION}}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -54,11 +53,11 @@ jobs:
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/export_templates/
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+          mv /root/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable ~/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable
       - name: Web Build
         run: |
           mkdir -v -p build/web
-          godot --headless --verbose --export-release "WEB_CONFIG_NAME" ./build/web/index.html
+          godot --headless --verbose --export-release "${{env.WEB_CONFIG_NAME}}" ./build/web/index.html
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -66,10 +65,10 @@ jobs:
           path: build/web
 
   export-mac:
-    name: MacOS Export - Dev
+    name: MacOS Export - Release
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:$CI_VERSION
+      image: barichello/godot-ci:${{env.CI_VERSION}}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -78,11 +77,11 @@ jobs:
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/export_templates/
-          mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
+          mv /root/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable ~/.local/share/godot/export_templates/${{env.GODOT_VERSION}}.stable
       - name: Mac Build
         run: |
           mkdir -v -p build/mac
-          godot --headless --verbose --export-release "MAC_CONFIG_NAME" ./build/mac/$EXPORT_NAME.zip
+          godot --headless --verbose --export-release "${{env.MAC_CONFIG_NAME}}" ./build/mac/${{env.EXPORT_NAME}}.zip
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
