--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -1,10 +1,8 @@
 # This action builds and exports the project to multiple platforms on push to the dev branch
 
-name: "Godot Export Dev"
+name: Godot Export Dev
 on:
   workflow_dispatch:
-    branches:
-      - _working
   push:
     branches:
       - dev
