--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -21,7 +21,7 @@ jobs:
     name: Windows Export - Dev
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:${{CI_VERSION}}
+      image: barichello/godot-ci:4.2.2
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -45,7 +45,7 @@ jobs:
     name: HTML5 Export - Dev
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:${{CI_VERSION}}
+      image: barichello/godot-ci:4.2.2
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -69,7 +69,7 @@ jobs:
     name: MacOS Export - Dev
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:${{CI_VERSION}}
+      image: barichello/godot-ci:4.2.2
     steps:
       - name: Checkout
         uses: actions/checkout@v2
