--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -1,26 +1,25 @@
 # This action builds and exports the project to multiple platforms on push to the main branch
 
-name: "godot-ci export_release"
-on: 
+name: Godot Export Release
+on:
+  workflow_dispatch:
   push:
-   branches: ['main']
-
+    branches:
+      - main
 env:
   GODOT_VERSION: 4.2.2
-  CI_VERSION: 4.2.2
-  EXPORT_NAME: jam
+  EXPORT_NAME: jam_dev
   WIN_CONFIG_NAME: windows
   MAC_CONFIG_NAME: mac
   WEB_CONFIG_NAME: web
   LIN_CONFIG_NAME: linux
-  # PROJECT_PATH: godot_template
-  
+
 jobs:
   export-windows:
     name: Windows Export - Release
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:${{env.CI_VERSION}}
+      image: barichello/godot-ci:4.2.2
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -33,7 +32,7 @@ jobs:
       - name: Windows Build
         run: |
           mkdir -v -p build/windows
-          godot --headless --verbose --export-release "${{env.WIN_CONFIG_NAME}}"./build/windows/${{env.EXPORT_NAME}}.exe
+          godot --headless --verbose --export-release "${{env.WIN_CONFIG_NAME}}" ./build/windows/${{env.EXPORT_NAME}}.exe
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -44,7 +43,7 @@ jobs:
     name: HTML5 Export - Release
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:${{env.CI_VERSION}}
+      image: barichello/godot-ci:4.2.2
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -68,7 +67,7 @@ jobs:
     name: MacOS Export - Release
     runs-on: ubuntu-20.04
     container:
-      image: barichello/godot-ci:${{env.CI_VERSION}}
+      image: barichello/godot-ci:4.2.2
     steps:
       - name: Checkout
         uses: actions/checkout@v2
